# project-lighthouse-anonymize

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/commands/: release.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docs-wiki.yml  docs.yml  publish.yml  test.yml
docs/: api.rst  conf.py  getting_started.md  index.rst  requirements.txt
src/project_lighthouse_anonymize/: __init__.py  _version.py  constants.py  futures.py  gtrees.py  p_sensitize.py  pandas_utils.py  utils.py
src/project_lighthouse_anonymize/data_quality_metrics/: __init__.py  misc.py  nmi.py  pearson.py  rilm_ilm.py
src/project_lighthouse_anonymize/disclosure_risk_metrics/: __init__.py  l_diversity.py  p_sensitive_k_anonymity.py
src/project_lighthouse_anonymize/mondrian/: core.py  funnel_stats.py  implementation.py  k_anonymity.py  original.py  rilm.py  tree.py
src/project_lighthouse_anonymize/wrappers/: dtype_conversion.py  k_anonymize.py  p_sensitize.py  shared.py
tests/: shared.py  test_futures.py  test_futures_result_caching.py  test_gtrees.py  test_gtrees_serialization_edge_cases.py  test_p_sensitize_categorical_and_validation.py  test_p_sensitize_value_preservation.py  test_pandas_utils.py  test_utils.py
tests/data_quality_metrics/: __init__.py  misc.py  nmi.py  pearson.py  rilm_ilm.py  test_nmi_dtype_edge_cases.py  test_nmi_per_qid_isolation.py  test_rilm_nan_perimeter.py
tests/disclosure_risk_metrics/: test_categorical_dtype_handling.py  test_l_diversity.py  test_p_sensitive_k_anonymity.py
tests/integration/: test_adults.py
tests/mondrian/: test_nan_cut_score_selection.py  test_score_proposed_cut.py  test_validate_and_tree_edge_cases.py
tests/wrappers/: test_check_dq_meets_minimum_thresholds.py  test_compute_score_nan_handling.py  test_dtype_conversion.py  test_dtype_conversion_generalized_labels.py  test_k_anonymity.py  test_k_anonymity_original_mondrian.py  test_p_sensitize.py  test_select_best_run.py
