[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "project-lighthouse-anonymize"
dynamic = ["version"]
description = "Privacy-preserving data anonymization using k-anonymity and related algorithms"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Adam Bloomston", email = "adam.bloomston@airbnb.com"},
]
keywords = ["privacy", "anonymization", "k-anonymity", "data-privacy", "differential-privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "first>=2.0.0,<3.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "numpy>=1.20.0,<2.0.0",
    "numba>=0.56.0,<1.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scipy>=1.7.0,<2.0.0",
    "treelib>=1.6.0,<2.0.0",
    "ucimlrepo==0.0.7",
    "fastparquet==2024.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-randomly>=3.0.0",
    "pytest-profiling>=1.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/airbnb/project-lighthouse-anonymize"
Documentation = "https://project-lighthouse-anonymize.readthedocs.io"
Repository = "https://github.com/airbnb/project-lighthouse-anonymize"
"Bug Tracker" = "https://github.com/airbnb/project-lighthouse-anonymize/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/project_lighthouse_anonymize/_version_info.py"

[tool.hatch.build.targets.wheel]
packages = ["src/project_lighthouse_anonymize"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=project_lighthouse_anonymize",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--doctest-modules",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
source = ["project_lighthouse_anonymize"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W"]
ignore = [
    "E501",   # Line length: Prefer readability over strict 100-char limit for docstrings/comments
    "N801",   # Class naming: Keep underscore names (Implementation_Base, etc.) to match Core Mondrian technical paper conventions
    "UP035",  # Typing imports: Prefer typing.Generator over collections.abc.Generator for consistency with other typing imports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedVariable = true
reportUnusedImport = true
